# haskell-discord-bot

./: .gitignore  LICENSE  discord-bot.cabal  discord_token
app/: Main.hs
