cabal-version:      3.0
name:               discord-bot
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Matysse
maintainer:         .
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable discord-bot
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        discord-haskell,
        base64-bytestring,
        cryptonite,
        bytestring,
        text,
        unliftio,
        base ^>=4.18.3.0
    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
